Fix bug #78697: inaccurate error message

ReflectionClass::implementsInterface - inaccurate error message with traits